--- a/build.gradle
+++ b/build.gradle
@@ -18,13 +18,18 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation "org.springframework.boot:spring-boot-starter-data-jpa"
+	implementation "org.springframework.boot:spring-boot-starter-validation"
+	implementation "org.springframework.boot:spring-boot-starter-web"
+	developmentOnly "org.springframework.boot:spring-boot-devtools"
+	runtimeOnly 'com.mysql:mysql-connector-j:8.2.0'
+	testImplementation "org.springframework.boot:spring-boot-starter-test"
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-	compileOnly 'org.projectlombok:lombok:1.18.32'
-	annotationProcessor 'org.projectlombok:lombok:1.18.32'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	runtimeOnly 'com.mysql:mysql-connector-j'
+	compileOnly "org.projectlombok:lombok:1.18.38"
+	annotationProcessor "org.projectlombok:lombok:1.18.38"
+
+	testCompileOnly "org.projectlombok:lombok:1.18.38"
+	testAnnotationProcessor "org.projectlombok:lombok:1.18.38"
 }
 
 tasks.named('test') {
