--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=demo
+# Configure the application database path and creation if it doesn't exist
+spring.datasource.url=jdbc:mysql://localhost:3306/warhammer
+# Configure database credentials
+spring.datasource.username=root
+spring.datasource.password=alumno
+# Configure hibernate to create/update schema with entities changes
+spring.jpa.hibernate.ddl-auto=update
+
+
