--- a/build.gradle
+++ b/build.gradle
@@ -21,9 +21,10 @@ dependencies {
 	implementation "org.springframework.boot:spring-boot-starter-data-jpa"
 	implementation "org.springframework.boot:spring-boot-starter-validation"
 	implementation "org.springframework.boot:spring-boot-starter-web"
+	testImplementation "org.springframework.boot:spring-boot-starter-test"
 	developmentOnly "org.springframework.boot:spring-boot-devtools"
 	runtimeOnly 'com.mysql:mysql-connector-j:8.2.0'
-	testImplementation "org.springframework.boot:spring-boot-starter-test"
+
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	compileOnly "org.projectlombok:lombok:1.18.38"
 	annotationProcessor "org.projectlombok:lombok:1.18.38"
@@ -31,6 +32,7 @@ dependencies {
 	testCompileOnly "org.projectlombok:lombok:1.18.38"
 	testAnnotationProcessor "org.projectlombok:lombok:1.18.38"
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+	testImplementation 'org.springframework.security:spring-security-test'
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
 	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
