#7 all endpoints working properly.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/warhammer
 spring.datasource.username=root
 spring.datasource.password=alumno
 # Configure hibernate to create/update schema with entities changes
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
-
+logging.level.org.springframework.security= TRACE
