#7 User Model modified.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.datasource.password=alumno
 # Configure hibernate to create/update schema with entities changes
 spring.jpa.hibernate.ddl-auto=none
 
-logging.level.org.springframework.security= TRACE
+#logging.level.org.springframework.security= TRACE
