--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/warhammer
 spring.datasource.username=root
 spring.datasource.password=alumno
 # Configure hibernate to create/update schema with entities changes
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 
 #logging.level.org.springframework.security= TRACE
+
+spring.jpa.open-in-view=false
